--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -32,9 +32,8 @@ header {
 	}
 
 	.terminal-input {
-		position:fixed;
-		top:43px;
-		left:35vw;
+		position:absolute;
+		margin-top:22px;
 		width:30vw;
 	}
 
