Fixing some verbal stuff + making sure max-height is set on generated code <pre>

--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -56,7 +56,7 @@
 			Rest: `ctrl+c` to copy and `ctrl+v` to paste.
 			<br /><br />
 		</p>
-		<pre id="test"></pre>
+		<pre id="generatedcode"></pre>
 	</div>
 
 	<footer class="col-md-12">
